<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>com.github.jjb-coding</groupId>
        <artifactId>trellis-parent</artifactId>
        <version>1.0.0</version>
        <relativePath>../pom.xml</relativePath>
    </parent>

    <artifactId>trellis-example</artifactId>

    <dependencies>
        <dependency>
            <groupId>com.github.jjb-coding</groupId>
            <artifactId>trellis</artifactId>
            <version>1.0.0</version>
        </dependency>
    </dependencies>

    <properties>
        <maven.compiler.release>16</maven.compiler.release>
    </properties>

</project>